--- a/web/templates/main.html
+++ b/web/templates/main.html
@@ -93,6 +93,7 @@
             <div id="course-{{course.course}}" class="flex-container course" style="display: none">
                 <div class="flex-container-column">
                     <p>1 семестр</p>
+                    <div class="flex-container flex-center">
                     <table class="table table-strip table-advance table-hover table2">
                         <tbody>
                             <tr>
@@ -137,12 +138,14 @@
                             </tbody>
                         </table>
                 {% if course.first_semester_diagram is not None %}
-                    <img src="data:image/png;base64,{{ course.first_semester_pie|safe }}" alt="">
-                    <img src="data:image/png;base64,{{ course.first_semester_diagram|safe }}" alt="">
+                    <img class="pie" src="data:image/png;base64,{{ course.first_semester_pie|safe }}" alt="">
+                    </div>
+                    <img class="bar" src="data:image/png;base64,{{ course.first_semester_diagram|safe }}" alt="">
                 {% endif %}
                 </div>
                 <div class="flex-container-column">
                     <p>2 семестр</p>
+                    <div class="flex-container flex-center">
                     <table class="table table-strip table-advance table-hover table2">
                         <tbody>
                             <tr>
@@ -188,8 +191,9 @@
                     </table>
 
                 {% if course.second_semester_diagram is not None %}
-                    <img src="data:image/png;base64,{{ course.second_semester_pie|safe }}" alt="">
-                    <img src="data:image/png;base64,{{ course.second_semester_diagram|safe }}" alt="">
+                    <img class="pie" src="data:image/png;base64,{{ course.second_semester_pie|safe }}" alt="">
+                    </div>
+                    <img class="bar" src="data:image/png;base64,{{ course.second_semester_diagram|safe }}" alt="">
                 {% endif %}
                 </div>
             </div>
