--- a/web/templates/main.html
+++ b/web/templates/main.html
@@ -92,7 +92,7 @@
         {% for course in data %}
             <div id="course-{{course.course}}" class="flex-container course" style="display: none">
                 <div class="flex-container-column">
-                    <p>1 семестр</p>
+                    <p class="button-sem">1 семестр</p>
                     <div class="flex-container flex-center">
                     <table class="table table-strip table-advance table-hover table2">
                         <tbody>
@@ -144,7 +144,7 @@
                 {% endif %}
                 </div>
                 <div class="flex-container-column">
-                    <p>2 семестр</p>
+                    <p class="button-sem" style="margin-top: 4vh">2 семестр</p>
                     <div class="flex-container flex-center">
                     <table class="table table-strip table-advance table-hover table2">
                         <tbody>
