--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -34,6 +34,11 @@
                 {% else %}
                 <div style="margin-left: 30%" class="flex-container">
                     <b class="username"><i>{{ user.username }}</i></b>
+                    {% if user.is_superuser %}
+                        <div  class="button">
+                                <a href="/admin/"><div style="color:white">Админка</div></a>
+                                </div>
+                    {% endif %}
                     <div class="button">
                         <a href="{% url 'logout' %}"><div style="color:white">Выйти</div></a>
                     </div>
